curso daryus e arrumacao

--- a/english/index.html
+++ b/english/index.html
@@ -25,7 +25,7 @@
             <div class="actions">
 				<a class="btn d-none d-md-inline-block" href="../">Português</a>
                 <a class="btn d-none d-md-inline-block" href="mailto:danielbassoribas@hotmail.com; bassosrd@tcd.ie"><i class="fas fa-paper-plane" aria-hidden="true"></i> Contact Me</a>
-                <a class="btn" href="../documents/ResumeDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Download my resume </a>
+               <!-- <a class="btn" href="../documents/ResumeDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Download my resume </a> -->
             </div><!--//actions-->
             <ul class="social list-inline">
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/daniel-basso-ribas-b60215135"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
@@ -39,10 +39,7 @@
                 <h1 class="name">Daniel Basso Ribas</h1>
                 <div class="title">Data Scientist and Developer</div>
                 <div class="profile">
-                    <p>Since I graduated in Statistics from the Federal University of Paraná in 2016, 
-					I have been looking for exercising this activity at a professional level. 
-					I am willing to help people make information-based better decisions. 
-					I have knowledge in the areas of Data Science and Information Technology.</p>
+                    <p>I love software engineering and data science in equal measure. In my career I've worked in both areas (sometimes simultaneously) always looking to delve into the subject and use modern technologies. I like the well-structured engineering methodologies as well as the unpredictable possibilities of data.</p>
                 </div><!--//profile-->
             </div><!--//container-->
         </div><!--//intro-->
@@ -61,10 +58,10 @@
             <div id="page-nav-wrapper" class="page-nav-wrapper text-center">
                 <div class="container">
                     <ul id="page-nav" class="nav page-nav list-inline">
+                            <li class="nav-item"><a class="scrollto nav-link" href="#experiences-section">Experiences</a></li>
 							<li class="nav-item"><a class="scrollto nav-link" href="#education-section">Education</a></li>
                             <li class="nav-item"><a class="scrollto nav-link" href="#education-section-2">Training and Certifications</a></li>
-                            <li class="nav-item"><a class="scrollto nav-link" href="#skills-section">Skills</a></li>
-                            <li class="nav-item"><a class="scrollto nav-link" href="#experiences-section">Experiences</a></li>
+                            <li class="nav-item"><a class="scrollto nav-link" href="#skills-section">Skills</a></li>                            
                             <li class="nav-item"><a class="scrollto nav-link" href="#contact-section">Contact</a></li>
                     </ul><!--//page-nav-->
                 </div>
@@ -75,6 +72,150 @@
     
 	
 	<div class="wrapper container">
+        <section id="experiences-section" class="experiences-section section">
+			<h2 class="section-title">Work Experiences</h2>
+			<div class="timeline">
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Banco do Brasil S/A</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title"> Data Scientist <br /> (Advisor) </div>
+						<div class="time">2021</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>Joined the Cyber and Fraud department using data modeling for fraud detection. </br>
+						</br>
+						Technologies I work with: 
+						<ul>
+							<li>Distributed computing: Cloudera (Spark, Hive, Hdfs, Kafka); </li>
+							<li>Servers: CentOs, Red Hat; </li>
+							<li>Databases: HBase, Mysql, Oracle; </li>
+							<li>Programming languages: R, Python and Scala.</li>
+						</ul>
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Banco do Brasil S/A</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title"> Developer and Data Scientist <br /> (Technical Analyst) </div>
+						<div class="time">2018 - 2021</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>After an internal selection which consisted of a technical assessment and interview, I join an Information Technology team in another internal unit of the Bank of Brazil, called Cenop Operations Curitiba. </br>
+						</br>
+						I worked with:
+						<ul>
+							<li>Development of software, back-end primarily in Java (with Spring Boot) and eventually PHP;</li>
+							<li>Front-end with Javascript / JQuery, CSS and HTML;</li>
+							<li>Statistical modeling and machine learning with Python and R;</li>
+							<li>Use of Sql DBMSs like MySql;</li>
+							<li>Creation of interactive dashboards for data presentation (Spotfire / Shiny);</li>
+							<li>Linux servers maintenance (Suse and CentOS).</li>
+						</ul>
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Banco do Brasil S/A (Bank of Brazil)</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title">Developer <br /> (Escriturário)</div>
+						<div class="time">2016 - 2018</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>After the exchange I was allocated to Cenop Serviços Curitiba; After a brief period of adaptation, early in 2017, I joined their development team, building software that is used by the center's teams to facilitate and automate their activities. Focus on web application development in Java. Also working with PHP development and MySQL database modeling.
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Trinity College Dublin</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Dublin</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title">Intern</div>
+						<div class="time">2016</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>
+							Between August 2015 and August 2016, I held an exchange program at Trinity College Dublin, Ireland. There, I had the opportunity to attend an academic internship with Dr. Jason Wyse, with the goal of refining the Latent Class Analysis technique for separating individuals into homogeneous groups.
+						</p> 
+						<ul>
+							<li><a href = "../documents/RelatorioEstagioIntercambio.pdf"> Descriptive report</a> of the academic internship, with a summary of the activities performed.</li>
+						</ul>
+					</div><!--//job-desc-->
+				</div><!--//item-->
+
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Applied Statistics Laboratory (Laboratório de Estatística Aplicada)</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title">Volunteer</div>
+						<div class="time">2012 - 2014</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>
+							In parallel to my work at Banco do Brasil, I volunteered for two years at the Applied Statistics Laboratory (LEA) at the Federal University of Paraná. The Laboratory provides statistical advice to research carried out at the Federal University of Paraná and other educational and research institutions, with the involvement of professors and students of the Statistics course. Consultancies are a unique opportunity to apply what is taught during the course in practice, as well as develop customer contact skills.
+						</p>
+						<ul>
+							<li> <a href = "../documents/LaboratoriaEstatisticaAplicada.pdf"> Proof of participation</a>  in LEA (partial).</li>
+							<li> <a href = "http://www.pipe.ufpr.br/portal/defesas/dissertacao/266.pdf">Consulting example</a> (my analysis was used by an UFPR master's student, see acknowledgment).
+						</ul>
+					</div><!--//job-desc-->
+				</div><!--//item-->
+
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Banco do Brasil S/A</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title">Escriturário</div>
+						<div class="time">2013 - 2015</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>For the next two years I moved to an internal unit of Banco do Brasil called Cenop Serviços Curitiba, where the primary activity is to help defend the institution in lawsuits. During this period I had the opportunity to conduct various training of new employees and managers to carry out their activities, consolidating communication skills, teamwork and knowledge of banking products.
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Banco do Brasil S/A</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>São José <br /> dos Pinhais</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title">Call center operator</div>
+						<div class="time">2011 - 2013</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p> <br />Shortly after being approved at Banco do Brasil, I was allocated for the first two years at the Banco do Brasil Call Center, performing bank transactions, answering questions and clarifying procedures for clients.
+						During this time I had the opportunity to develop communication skills, as well as learn about the Bank's products and operations.  
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+
+			</div><!--//timeline-->
+
+		</section><!--//section-->
 
 		<section id="education-section" class="education-section section">
 			<h2 class="section-title">Education</h2>
@@ -411,7 +552,7 @@
 							<br />
 							<ul>
 								<li> Course <a href="https://www.udemy.com/course/react-js-from-the-beginning-w-redux-and-react-router/">description and syllabus</a>.</li>
-								<li> Course <a href = "documents/TreinamentoReactRedux.pdf">certificate</a>.</li>
+								<li> Course <a href = ""../documents/TreinamentoReactRedux.pdf">certificate</a>.</li>
 							</ul>
 						</div>
 					</div><!--//item-inner-->
@@ -430,7 +571,7 @@
 							<br />
 							<ul>
 								<li> Course <a href="https://www.udemy.com/course/django-python/">description and syllabus</a>.</li>
-								<li> Course <a href = "documents/TreinamentoDjangoRest.pdf">certificate</a>.</li>
+								<li> Course <a href = ""../documents/TreinamentoDjangoRest.pdf">certificate</a>.</li>
 							</ul>
 						</div>
 					</div><!--//item-inner-->
@@ -449,12 +590,37 @@
 							<br />
 							<ul>
 								<li> Course <a href="https://www.udemy.com/nlp-natural-language-processing-with-python/"> description and syllabus </a>.</li>
-								<li> Course <a href = "documents/TreinamentoDjangoRestBeginner.pdf"> certificate </a>.</li>
+								<li> Course <a href = ""../documents/TreinamentoDjangoRestBeginner.pdf"> certificate </a>.</li>
 							</ul>
 						</div>
 					</div><!--//item-inner-->
 				</div><!--//item-->
 			</div><!--//row-->
+			
+            <div class="row">
+
+				 <div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">Web Application Security</h3>
+						<div class="education-body">
+							Daryus
+						</div><!--//education-body-->
+						<div class="time">2021</div>
+						<div class="desc">
+						Online course provided by Daryus with a 24-hour workload. It covers the top security threats listed by Owasp, such as Injection, XSS, Borken Access Control; and simple ways to prevent it. It uses the fictitious Juice Shop app for exercises, where the user can discover security flaws.
+							<br />
+							<br />
+							<ul>
+								<li> Course <a href="https://www.daryus.com.br/curso/web-application-security"> description and syllabus </a>. </li>
+								<li> Course <a href = ""../documents/TreinamnetoWebApplicationSecurity.png"> certificate </a>.</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+
+			
+			</div><!--//row-->
+			
 			
 		</section><!--//section-->
 
@@ -513,7 +679,6 @@
 					<span class="skill-tag">HTML</span>
 					<span class="skill-tag">CSS</span>
 					<span class="skill-tag">PHP</span>
-					<span class="skill-tag">JavaScript</span>
 					<span class="skill-tag">Git</span>
 					<span class="skill-tag">MySQL</span>
 					<span class="skill-tag">English</span>
@@ -522,127 +687,6 @@
 
 		</section><!--//skills-section-->
 
-		<section id="experiences-section" class="experiences-section section">
-			<h2 class="section-title">Work Experiences</h2>
-			<div class="timeline">
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Banco do Brasil S/A</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title"> Developer and Data Scientist <br /> (Technical Analyst) </div>
-						<div class="time">2018</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p>After an internal selection which consisted of a technical assessment and interview, I join an Information Technology team in another internal unit of the Bank of Brazil, called Cenop Operations Curitiba. </br>
-						</br>
-						I work with:
-						<ul>
-							<li>Development of software, back-end primarily in Java (with Spring Boot) and eventually PHP;</li>
-							<li>Front-end with Javascript / JQuery, CSS and HTML;</li>
-							<li>Statistical modeling and machine learning with Python and R;</li>
-							<li>Use of Sql DBMSs like MySql;</li>
-							<li>Creation of interactive dashboards for data presentation (Spotfire / Shiny);</li>
-							<li>Linux servers maintenance (Suse and CentOS).</li>
-						</ul>
-						</p> 
-					</div><!--//job-desc-->
-				</div><!--//item-->
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Banco do Brasil S/A (Bank of Brazil)</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title">Developer <br /> (Escriturário)</div>
-						<div class="time">2016 - 2018</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p>After the exchange I was allocated to Cenop Serviços Curitiba; After a brief period of adaptation, early in 2017, I joined their development team, building software that is used by the center's teams to facilitate and automate their activities. Focus on web application development in Java. Also working with PHP development and MySQL database modeling.
-						</p> 
-					</div><!--//job-desc-->
-				</div><!--//item-->
-
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Trinity College Dublin</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Dublin</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title">Intern</div>
-						<div class="time">2016</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p>
-							Between August 2015 and August 2016, I held an exchange program at Trinity College Dublin, Ireland. There, I had the opportunity to attend an academic internship with Dr. Jason Wyse, with the goal of refining the Latent Class Analysis technique for separating individuals into homogeneous groups.
-						</p> 
-						<ul>
-							<li><a href = "../documents/RelatorioEstagioIntercambio.pdf"> Descriptive report</a> of the academic internship, with a summary of the activities performed.</li>
-						</ul>
-					</div><!--//job-desc-->
-				</div><!--//item-->
-
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Applied Statistics Laboratory (Laboratório de Estatística Aplicada)</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title">Volunteer</div>
-						<div class="time">2012 - 2014</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p>
-							In parallel to my work at Banco do Brasil, I volunteered for two years at the Applied Statistics Laboratory (LEA) at the Federal University of Paraná. The Laboratory provides statistical advice to research carried out at the Federal University of Paraná and other educational and research institutions, with the involvement of professors and students of the Statistics course. Consultancies are a unique opportunity to apply what is taught during the course in practice, as well as develop customer contact skills.
-						</p>
-						<ul>
-							<li> <a href = "../documents/LaboratoriaEstatisticaAplicada.pdf"> Proof of participation</a>  in LEA (partial).</li>
-							<li> <a href = "http://www.pipe.ufpr.br/portal/defesas/dissertacao/266.pdf">Consulting example</a> (my analysis was used by an UFPR master's student, see acknowledgment).
-						</ul>
-					</div><!--//job-desc-->
-				</div><!--//item-->
-
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Banco do Brasil S/A</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title">Escriturário</div>
-						<div class="time">2013 - 2015</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p>For the next two years I moved to an internal unit of Banco do Brasil called Cenop Serviços Curitiba, where the primary activity is to help defend the institution in lawsuits. During this period I had the opportunity to conduct various training of new employees and managers to carry out their activities, consolidating communication skills, teamwork and knowledge of banking products.
-						</p> 
-					</div><!--//job-desc-->
-				</div><!--//item-->
-
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Banco do Brasil S/A</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>São José <br /> dos Pinhais</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title">Call center operator</div>
-						<div class="time">2011 - 2013</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p> <br />Shortly after being approved at Banco do Brasil, I was allocated for the first two years at the Banco do Brasil Call Center, performing bank transactions, answering questions and clarifying procedures for clients.
-						During this time I had the opportunity to develop communication skills, as well as learn about the Bank's products and operations.  
-						</p> 
-					</div><!--//job-desc-->
-				</div><!--//item-->
-
-			</div><!--//timeline-->
-
-		</section><!--//section-->
 
 		<section id="contact-section" class="contact-section section">
 			<h2 class="section-title">Get in Touch</h2>
