--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="actions">
 				<a class="btn d-none d-md-inline-block" href="english">English</a>
                 <a class="btn d-none d-md-inline-block" href="mailto:danielbassoribas@hotmail.com; bassosrd@tcd.ie"><i class="fas fa-paper-plane" aria-hidden="true"></i> Entre em Contato</a>
-                <a class="btn" href="documents/CurriculoDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Baixe meu currículo</a>
+                <!-- <a class="btn" href="documents/CurriculoDanielBassoRibas.pdf"><i class="fas fa-download" aria-hidden="true"></i> Baixe meu currículo</a> -->
             </div><!--//actions-->
             <ul class="social list-inline">
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/daniel-basso-ribas-b60215135"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
@@ -39,10 +39,7 @@
                 <h1 class="name">Daniel Basso Ribas</h1>
                 <div class="title">Cientista de Dados e Desenvolvedor</div>
                 <div class="profile">
-                    <p>Desde que me formei em Estatística pela Universidade Federal do Paraná em 2016, 
-					venho procurando exercer a atividade em nível profissional. 
-					Estou disposto a ajudar as pessoas a tomarem decisões melhores baseadas em informação. 
-					Possuo conhecimentos nas áreas de Ciência de Dados e Tecnologia da Informação.</p>
+                    <p>Adoro engenharia de software e ciência de dados na mesma medida. Na minha carreira já atuei nas duas áreas (as vezes simultaneamente) procurando sempre me aprofundar no tema e usar as tecnologias mais atuais. Gosto das metodologias de desenvolvimento bem estruturadas da engenharia bem como das possibilidades imprevisíveis dos dados.</p>
                 </div><!--//profile-->
             </div><!--//container-->
         </div><!--//intro-->
@@ -61,10 +58,10 @@
             <div id="page-nav-wrapper" class="page-nav-wrapper text-center">
                 <div class="container">
                     <ul id="page-nav" class="nav page-nav list-inline">
+                            <li class="nav-item"><a class="scrollto nav-link" href="#experiences-section">Experiência</a></li>
 							<li class="nav-item"><a class="scrollto nav-link" href="#education-section">Educação</a></li>
                             <li class="nav-item"><a class="scrollto nav-link" href="#education-section-2">Treinamentos e Certificações</a></li>
                             <li class="nav-item"><a class="scrollto nav-link" href="#skills-section">Habilidades</a></li>
-                            <li class="nav-item"><a class="scrollto nav-link" href="#experiences-section">Experiência</a></li>
                             <li class="nav-item"><a class="scrollto nav-link" href="#contact-section">Contato</a></li>
                     </ul><!--//page-nav-->
                 </div>
@@ -75,6 +72,152 @@
     
 	
 	<div class="wrapper container">
+	
+		<section id="experiences-section" class="experiences-section section">
+			<h2 class="section-title">Experiência Profissional</h2>
+			<div class="timeline">
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Banco do Brasil S/A</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title"> Data Scientist <br /> (Assessor) </div>
+						<div class="time">2021</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>Entrei na Unidade de Cyber e Fraudes utilizando modelagem de dados para prevenção de fraudes. </br>
+						</br>
+						Tecnologias com as quais trabalho:
+						<ul>
+							<li>Computação distribuida: Cloudera 6 (Spark, Hive, Hdfs, Kafka); </li>
+							<li>Servidores: CentOs, Red Hat;  </li>
+							<li>Bancos de dados: HBase, Mysql, Oracle; </li>
+							<li>Linguagens de programação: R, Python e Scala.</li>
+						</ul>
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Banco do Brasil S/A</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title">Analista Técnico Júnior <br /> (Desenvolvedor)</div>
+						<div class="time">2018</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>Após seleção interna composta de prova técnica e entrevista, passo a compor a equipe de desenvolvimento e Tecnologia da Informação em outra unidade interna do
+						Banco do Brasil, denominada Cenop Operações Curitiba. Lá, Trabalho com de desenvolvimento de softwares (primariamente em Java, com Spring Boot) 
+						e também compondo análises de dados, envolvendo a utilização de bancos de dados, linguagens R e Python e softwares para construção de 
+						dashboards interativas, como o Spotfire.
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Banco do Brasil S/A</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title">Escriturário <br /> (Desenvolvedor)</div>
+						<div class="time">2016 - 2018</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>Após o intercâmbio volto ser alocado no Cenop Serviços Curitiba; após um breve período de adaptação, no começo de 2017 ingresso na equipe de desenvolvimento,
+							construindo softwares que são usados pelas pelas equipes do centro para facilitar e automatizar a realização de suas atividades. Foco no desenvolvimento de aplicações Web em Java. 
+							Também atuando com desenvolvimento em PHP e modelagem de banco de dados MySQL.
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Trinity College Dublin</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Dublin</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title">Estágiario</div>
+						<div class="time">2016</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>
+							Entre Agosto de 2015 e Agosto de 2016, realizei Intercâmbio no Trinity College Dublin, Irlanda. Lá, tive a oportunidade de participar de um estágio acadêmico com o Dr. Jason Wyse, 
+							com o objetivo de refinar a técnica de Análise de Classes Latentes para separação de indivíduos em grupos homogêneos.
+						</p> 
+						<ul>
+							<li><a href = "documents/RelatorioEstagioIntercambio.pdf"> Relatório descritivo</a> do estágio acadêmico, com um resumo das atividades realizadas.</li>
+						</ul>
+					</div><!--//job-desc-->
+				</div><!--//item-->
+
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Laboratório de Estatística Aplicada</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title">Voluntário</div>
+						<div class="time">2012 - 2014</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>
+							Paralelamente ao trabalho no Banco do Brasil, fui voluntário por dois anos no Laboratório de Estatística Aplicada (LEA) da Universidade Federal do Paraná.
+							O Laboratório ferece assessoria estatística a pesquisas desenvolvidas na Universidade Federal do Paraná e em outras instituições de ensino e pesquisa, 
+							contando com o envolvimento de professores e alunos do curso de Estatística. As consultorias são uma oportunidade única para aplicar na prática o que é ensinado
+							durante o curso, além de desenvolver habilidades relacionados ao contato com clientes.
+						</p>
+						<ul>
+							<li> <a href = "documents/LaboratoriaEstatisticaAplicada.pdf"> Comprovante de  participação</a>  no LEA (parcial).</li>
+							<li> <a href = "http://www.pipe.ufpr.br/portal/defesas/dissertacao/266.pdf">Exemplo de consultoria</a> (análise foi utilizada por mestranda da UFPR, ver agradecimentos).
+						</ul>
+					</div><!--//job-desc-->
+				</div><!--//item-->
+
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Banco do Brasil S/A</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title">Escriturário</div>
+						<div class="time">2013 - 2015</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p>Nos dois anos seguintes me transferi para uma unidade interna do Banco do Brasil, chamada Cenop Serviços Curitiba, onde a atividade primaria é colaborar com a defesa da instituição em ações judiciais.
+							Neste período tive a oportunidade de realizar diversos treinamentos de novos funcionários e gestores para a realização de suas atividades, consolidando as habilidades de comunicação, trabalho em equipe
+							e conhecimento dos produtos bancários.
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+
+				<div class="item">
+					<div class="work-place">
+						<h3 class="place">Banco do Brasil S/A</h3>
+						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>São José <br /> dos Pinhais</div>
+						<br />
+					</div>
+					<div class="job-meta">
+						<div class="title">Atendente em <br/> Central de Atendimento</div>
+						<div class="time">2011 - 2013</div>
+					</div><!--//job-meta-->
+					<div class="job-desc">
+						<p> <br />Logo após ser aprovado no concurso do Banco do Brasil, fui lotado nos dois primeiros anos na Central de Atendimento Banco do Brasil, realizando transações bancárias, tirando dúvidas e esclarecendo procedimentos aos clientes.
+							Esse foi um período de desenvolvimento de  habilidades de comunicação, além de aprendizado sobre os produtos e funcionamento do Banco.   
+						</p> 
+					</div><!--//job-desc-->
+				</div><!--//item-->
+
+			</div><!--//timeline-->
+
+		</section><!--//section-->
 
 		<section id="education-section" class="education-section section">
 			<h2 class="section-title">Educação</h2>
@@ -465,6 +608,30 @@
 			
 			</div><!--//row-->
 			
+			<div class="row">
+
+				 <div class="item col-12 col-md-4">
+					<div class="item-inner">
+						<h3 class="degree">Web Application Security</h3>
+						<div class="education-body">
+							Daryus
+						</div><!--//education-body-->
+						<div class="time">2021</div>
+						<div class="desc">
+						Curso online disponibilizado pela Daryus com carga horária de 24 horas. Cobre as principais ameaças listadas pela Owasp, como Injection, XSS, Borken Access Control e maneiras simples de prevenção. Utiliza para exercícios o app fictício Juice Shop,onde o usuário pode descobrir falhas de segurança.
+							<br />
+							<br />
+							<ul>
+								<li> <a href="https://www.daryus.com.br/curso/web-application-security"> Descrição e ementa </a> do conteúdo do curso.</li>
+								<li> <a href = "documents/TreinamnetoWebApplicationSecurity.png"> Certificado </a> do treinamento.</li>
+							</ul>
+						</div>
+					</div><!--//item-inner-->
+				</div><!--//item-->
+
+			
+			</div><!--//row-->
+			
 		</section><!--//section-->
 
 
@@ -522,7 +689,6 @@
 					<span class="skill-tag">HTML</span>
 					<span class="skill-tag">CSS</span>
 					<span class="skill-tag">PHP</span>
-					<span class="skill-tag">JavaScript</span>
 					<span class="skill-tag">Git</span>
 					<span class="skill-tag">MySQL</span>
 					<span class="skill-tag">Inglês</span>
@@ -531,128 +697,6 @@
 
 		</section><!--//skills-section-->
 
-		<section id="experiences-section" class="experiences-section section">
-			<h2 class="section-title">Experiência Profissional</h2>
-			<div class="timeline">
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Banco do Brasil S/A</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title">Analista Técnico Júnior <br /> (Desenvolvedor)</div>
-						<div class="time">2018</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p>Após seleção interna composta de prova técnica e entrevista, passo a compor a equipe de desenvolvimento e Tecnologia da Informação em outra unidade interna do
-						Banco do Brasil, denominada Cenop Operações Curitiba. Lá, Trabalho com de desenvolvimento de softwares (primariamente em Java, com Spring Boot) 
-						e também compondo análises de dados, envolvendo a utilização de bancos de dados, linguagens R e Python e softwares para construção de 
-						dashboards interativas, como o Spotfire.
-						</p> 
-					</div><!--//job-desc-->
-				</div><!--//item-->
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Banco do Brasil S/A</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title">Escriturário <br /> (Desenvolvedor)</div>
-						<div class="time">2016 - 2018</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p>Após o intercâmbio volto ser alocado no Cenop Serviços Curitiba; após um breve período de adaptação, no começo de 2017 ingresso na equipe de desenvolvimento,
-							construindo softwares que são usados pelas pelas equipes do centro para facilitar e automatizar a realização de suas atividades. Foco no desenvolvimento de aplicações Web em Java. 
-							Também atuando com desenvolvimento em PHP e modelagem de banco de dados MySQL.
-						</p> 
-					</div><!--//job-desc-->
-				</div><!--//item-->
-
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Trinity College Dublin</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Dublin</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title">Estágiario</div>
-						<div class="time">2016</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p>
-							Entre Agosto de 2015 e Agosto de 2016, realizei Intercâmbio no Trinity College Dublin, Irlanda. Lá, tive a oportunidade de participar de um estágio acadêmico com o Dr. Jason Wyse, 
-							com o objetivo de refinar a técnica de Análise de Classes Latentes para separação de indivíduos em grupos homogêneos.
-						</p> 
-						<ul>
-							<li><a href = "documents/RelatorioEstagioIntercambio.pdf"> Relatório descritivo</a> do estágio acadêmico, com um resumo das atividades realizadas.</li>
-						</ul>
-					</div><!--//job-desc-->
-				</div><!--//item-->
-
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Laboratório de Estatística Aplicada</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title">Voluntário</div>
-						<div class="time">2012 - 2014</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p>
-							Paralelamente ao trabalho no Banco do Brasil, fui voluntário por dois anos no Laboratório de Estatística Aplicada (LEA) da Universidade Federal do Paraná.
-							O Laboratório ferece assessoria estatística a pesquisas desenvolvidas na Universidade Federal do Paraná e em outras instituições de ensino e pesquisa, 
-							contando com o envolvimento de professores e alunos do curso de Estatística. As consultorias são uma oportunidade única para aplicar na prática o que é ensinado
-							durante o curso, além de desenvolver habilidades relacionados ao contato com clientes.
-						</p>
-						<ul>
-							<li> <a href = "documents/LaboratoriaEstatisticaAplicada.pdf"> Comprovante de  participação</a>  no LEA (parcial).</li>
-							<li> <a href = "http://www.pipe.ufpr.br/portal/defesas/dissertacao/266.pdf">Exemplo de consultoria</a> (análise foi utilizada por mestranda da UFPR, ver agradecimentos).
-						</ul>
-					</div><!--//job-desc-->
-				</div><!--//item-->
-
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Banco do Brasil S/A</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>Curitiba</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title">Escriturário</div>
-						<div class="time">2013 - 2015</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p>Nos dois anos seguintes me transferi para uma unidade interna do Banco do Brasil, chamada Cenop Serviços Curitiba, onde a atividade primaria é colaborar com a defesa da instituição em ações judiciais.
-							Neste período tive a oportunidade de realizar diversos treinamentos de novos funcionários e gestores para a realização de suas atividades, consolidando as habilidades de comunicação, trabalho em equipe
-							e conhecimento dos produtos bancários.
-						</p> 
-					</div><!--//job-desc-->
-				</div><!--//item-->
-
-				<div class="item">
-					<div class="work-place">
-						<h3 class="place">Banco do Brasil S/A</h3>
-						<div class="location"><br /><i class="fa fa-map-marker" aria-hidden="true"></i>São José <br /> dos Pinhais</div>
-						<br />
-					</div>
-					<div class="job-meta">
-						<div class="title">Atendente em <br/> Central de Atendimento</div>
-						<div class="time">2011 - 2013</div>
-					</div><!--//job-meta-->
-					<div class="job-desc">
-						<p> <br />Logo após ser aprovado no concurso do Banco do Brasil, fui lotado nos dois primeiros anos na Central de Atendimento Banco do Brasil, realizando transações bancárias, tirando dúvidas e esclarecendo procedimentos aos clientes.
-							Esse foi um período de desenvolvimento de  habilidades de comunicação, além de aprendizado sobre os produtos e funcionamento do Banco.   
-						</p> 
-					</div><!--//job-desc-->
-				</div><!--//item-->
-
-			</div><!--//timeline-->
-
-		</section><!--//section-->
 
 		<section id="contact-section" class="contact-section section">
 			<h2 class="section-title">Entre em Contato</h2>
